--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Social"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.message.MessageActivity"></activity>
-        <!-- Remove after server add https -->
+        <activity android:name=".ui.profile.ProfileActivity" />
+        <activity android:name=".ui.message.MessageActivity" />
         <activity
             android:name=".ui.login.LoginActivity"
             android:label="@string/title_activity_login" />
