--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation 'com.squareup.retrofit2:converter-jackson:2.9.0'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.0'
     implementation 'com.squareup.retrofit2:adapter-guava:2.9.0'
     implementation "androidx.paging:paging-runtime:3.0.1"
     implementation "androidx.paging:paging-guava:3.0.1"
