--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build_apk_aab:
-    name: build release artifacts
+    name: Build release artifacts
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
@@ -44,7 +44,6 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: app-release.apk
-          path: /apk
 
       - uses: actions/checkout@v3
       - name: Send release message
@@ -53,4 +52,4 @@ jobs:
           to: ${{ secrets.TELEGRAM_CHAT_ID }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
           message: New version avaliable!
-          message_file: /apk/app-release.apk
+          message_file: ./app-release.apk
