--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,6 +46,7 @@ jobs:
         with:
           name: app-release.apk
           path: /home/runner/work/social-mobile/social-mobile
+      - run: ls /home/runner/work/social-mobile/social-mobile
       - name: Send release message
         uses: appleboy/telegram-action@master
         with:
