--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,18 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Social"
         android:usesCleartextTraffic="true">
-        <activity android:name=".ui.registration.RegistrationActivity" />
-        <activity android:name=".ui.registration.EmailConfirmActivity" />
-        <activity android:name=".ui.profile.ProfileSettingActivity" />
-        <activity android:name=".ui.profile.ProfileActivity" />
+        <activity android:name=".ui.registration.RegistrationActivity" android:theme="@style/Theme.Social.NoActionBar" />
+        <activity android:name=".ui.registration.EmailConfirmActivity" android:theme="@style/Theme.Social.NoActionBar" />
+        <activity android:name=".ui.profile.ProfileSettingActivity" android:theme="@style/Theme.Social.NoActionBar" />
+        <activity android:name=".ui.profile.ProfileActivity" android:theme="@style/Theme.Social.NoActionBar" />
         <activity android:name=".ui.message.MessageActivity" />
-        <activity android:name=".ui.friend.FriendActivity" />
+        <activity android:name=".ui.friend.FriendActivity" android:theme="@style/Theme.Social.NoActionBar" />
+        <activity android:name=".ui.login.LoginActivity" android:theme="@style/Theme.Social.NoActionBar" />
         <activity
-            android:name=".ui.login.LoginActivity"
-            android:label="@string/title_activity_login" />
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name">
+            android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
